--- a/force-app/main/default/classes/CP_SendMailForAssetAllocation.cls
+++ b/force-app/main/default/classes/CP_SendMailForAssetAllocation.cls
@@ -21,7 +21,7 @@ public class CP_SendMailForAssetAllocation implements Database.Batchable<sObject
     
     public Database.QueryLocator start(Database.BatchableContext bc){
         return Database.getQueryLocator(
-        	'SELECT id, EMS_EM_JD__c, Resource_Manager__c, Resource_Manager__r.Official_Mail__c, Resource_Manager__r.name FROM Contact WHERE EMS_EM_JD__c != NULL AND RecordType.Name = \'Applicant\'' 
+        	'SELECT id, EMS_EM_JD__c, Resource_Manager__c, Is_Email_Sent_To_IT_Team__c, Resource_Manager__r.Official_Mail__c, Resource_Manager__r.name FROM Contact WHERE EMS_EM_JD__c != NULL AND RecordType.Name = \'Applicant\'' 
         );
     }
     
@@ -29,8 +29,15 @@ public class CP_SendMailForAssetAllocation implements Database.Batchable<sObject
         List<Contact> updatedContactList = new List<Contact>();
         List<Contact> contactListForIT = new List<Contact>();
         List<Contact> contactListForRM = new List<Contact>();
+       
         for(Contact contactRec : contactList){
+            Date today = Date.today();
+        	Date sobjectDate = contactRec.EMS_EM_JD__c;
+            
             if(contactRec.EMS_EM_JD__c.addDays(-10) == System.today()){
+                updatedContactList.add(contactRec);
+            }
+            if(today.daysBetween(sobjectDate) < 10 && contactRec.Is_Email_Sent_To_IT_Team__c == False){
                 updatedContactList.add(contactRec);
             }
             if(contactRec.EMS_EM_JD__c == System.today()){
@@ -42,7 +49,15 @@ public class CP_SendMailForAssetAllocation implements Database.Batchable<sObject
         }
         
         if(updatedContactList.size() > 0){
-            sendEmailToITTeamForNewJoin(updatedContactList);
+            String status = sendEmailToITTeamForNewJoin(updatedContactList);
+            if(status == 'success'){
+                List<Contact> finalContactList = new List<Contact>();
+                for(Contact con : updatedContactList){
+                    con.Is_Email_Sent_To_IT_Team__c = True;
+                    finalContactList.add(con);
+                }
+                update finalContactList;
+            }
         }
         if(contactListForIT.size() > 0){
             sendEmailToITTeam(contactListForIT);
@@ -54,7 +69,7 @@ public class CP_SendMailForAssetAllocation implements Database.Batchable<sObject
         
     }
     
-    public static Void sendEmailToITTeamForNewJoin(List<Contact> contactRecordsList){
+    public static String sendEmailToITTeamForNewJoin(List<Contact> contactRecordsList){
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Email To IT Team For Assets' LIMIT 1];
@@ -68,7 +83,12 @@ public class CP_SendMailForAssetAllocation implements Database.Batchable<sObject
             mail.setSaveAsActivity(false);         
             mails.add(mail);
         }
-        Messaging.sendEmail(mails);
+        Messaging.SendEmailResult[] results = Messaging.sendEmail(mails);
+        if (results[0].success) {
+            return 'success';
+        } else {
+            return 'failure';
+        }
     }
     
     public static Void sendEmailToITTeam(List<Contact> contactRecordsList){
